# serialization_utils

./: CHANGELOG.md  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  package.xml
include/serialization_utils/: cereal_cvmat.hpp  cereal_json.hpp  gzip_iostream.hpp
src/: gzip_iostream.cpp
test/: test_serialize_cvmat.cpp
