<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>serialization_utils</name>
    <version>0.1.0</version>
    
    <description>
        Utilities for data serialization.
    </description>

    <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
    <url type="repository">https://github.com/MPI-IS/serialization_utils</url>
    <license>mixed</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <!-- CMake module containing helper to find the OS, boost, python, etc. -->
    <build_depend>mpi_cmake_modules</build_depend>

    <depend>libcereal-dev</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>rosunit</test_depend>
    <test_depend>libopencv-dev</test_depend>
    <test_depend>libcereal-dev</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
